--- a/_posts/2014-10-26-web.md
+++ b/_posts/2014-10-26-web.md
@@ -14,7 +14,7 @@ title: web前端out click事件的实现
 
 按照这个分析，关键点就落在了判断节点父子关系上面了。
 
-其实早在IE5的时候，Node.prototype上面就有一个函数[contains](https://developer.mozilla.org/en-US/docs/Web/API/Node.contains)，用于判断父子关系。不过mobile部分测试似乎不太充分，所以此处最好保留一个自己实现的版本，代码如下：
+其实早在IE5的时候，Node.prototype上面就有一个函数[contains](https://developer.mozilla.org/en-US/docs/Web/API/Node.contains){:target="_blank"}，用于判断父子关系。不过mobile部分测试似乎不太充分，所以此处最好保留一个自己实现的版本，代码如下：
 
 {% highlight js %}
 function contains(parentNode, childNode) {
@@ -73,4 +73,4 @@ function outer(elem, callback) {
 
 读者可以思考一下这两个点，然后再参考我的实现方式，整个代码请移步：
 
-[https://github.com/yibuyisheng/web-ui/blob/master/static/js/src/event/outer.js](https://github.com/yibuyisheng/web-ui/blob/master/static/js/src/event/outer.js)
+[https://github.com/yibuyisheng/web-ui/blob/master/static/js/src/event/outer.js](https://github.com/yibuyisheng/web-ui/blob/master/static/js/src/event/outer.js){:target="_blank"}
