--- a/_posts/2014-10-31-web.md
+++ b/_posts/2014-10-31-web.md
@@ -8,7 +8,7 @@ title: 一些core javascript的基础知识
 ### 一、setTimeout
 
 {% highlight js %}
-setTimtout(function(){
+setTimeout(function(){
    alert(2);                           // 后弹出
 },0);
 alert(1);                              // 先弹出
@@ -18,7 +18,7 @@ alert(1);                              // 先弹出
 
 * 1、首先jsvm只会执行一个线程；
 
-* 2、当这个线程遇到setTimout的时候，就会讲这个function放到某个队列里面；
+* 2、当这个线程遇到setTimeout的时候，就会将这个function放到某个队列里面；
 
 * 3、当前这个线程空闲的时候，就会执行任务队列轮询的代码，将满足条件的函数拿出来执行。
 
