--- a/_posts/2014-12-10-web.md
+++ b/_posts/2014-12-10-web.md
@@ -22,6 +22,38 @@ title: angular源码学习
 * 10、添加ng模块；
 * 11、创建injector；
 * 12、编译、连接element及其children；
-* 13、返回injector引导结束；
+* 13、返回injector，引导结束；
 * 14、清除window.name中的延迟标记；
 * 15、在全局angular上添加resumeBootstrap方法，可以传入另外的modules参数，等待外部调用，外部调用时，就进入了第5步；
+
+### compile编译步骤
+
+compile声明：function compile($compileNodes, transcludeFn, maxPriority, ignoreDirective, previousCompileContext) { ... }
+
+执行步骤：
+
+* 1、如果$compileNodes不是jqLite对象，则转换成jqLite对象；
+* 2、将文本节点用span标签包裹起来；
+* 3、使用compileNodes函数编译节点，并生成连接函数compositeLinkFn（运用函数compositeLinkFn）；
+* 4、给当前编译中的节点添加class标记；
+* 5、返回给外部连接函数。
+
+compileNodes函数执行步骤：
+
+* 1、遍历nodeList，针对每个node，执行如下2-6的步骤；
+* 2、搜集node中的指令（运用函数collectDirectives）；
+* 3、如果该节点中存在指令，则为该节点生成连接函数nodeLinkFn（运用函数applyDirectivesToNode），否则nodeLinkFn为null；
+* 4、TODO: if (nodeLinkFn && nodeLinkFn.scope) ...；
+* 5、TODO: childLinkFn = ...；
+* 6、如果nodeLinkFn或者childLinkFn存在，则将其暂存在linkFns数组；
+* 7、如果linkFns不为空数组，则返回compositeLinkFn函数作为连接函数；
+
+### link连接步骤
+
+link函数样子：function publicLinkFn(scope, cloneConnectFn, options) { ... }
+
+* 1、检测scope参数是否存在，如果不存在，抛出异常；
+* 2、
+
+
+
