--- a/_posts/2014-12-10-web.md
+++ b/_posts/2014-12-10-web.md
@@ -57,3 +57,9 @@ link函数样子：function publicLinkFn(scope, cloneConnectFn, options) { ... }
 * 3、TODO: if (!namespace) { ...；
 * ...
 
+### angular中的知识点
+
+* 依赖注入
+* 编译连接
+* digest
+
