--- a/_posts/2014-12-16-web.md
+++ b/_posts/2014-12-16-web.md
@@ -3,7 +3,7 @@ layout: post
 title: css小知识
 ---
 
-# [如何将页脚固定在页面底部](http://www.w3cplus.com/css/css-sticky-foot-at-bottom-of-the-page){:target:_blank}
+# [如何将页脚固定在页面底部](http://www.w3cplus.com/css/css-sticky-foot-at-bottom-of-the-page){:target="_blank"}
 
 作为一个Web的前端攻城师，在制作页面效果时肯定有碰到下面这种现象：当一个HTML页面中含有较少的内容时，Web页面的“footer”部分随着飘上来，处在页面的半腰中间，给视觉效果带来极大的影响，让你的页面看上去很不好看，特别是现在宽屏越来越多，这种现象更是常见。那么如何将Web页面的“footer”部分永远固定在页面的底部呢？注意了这里所说的是页脚footer永远固定在页面的底部，而不是永远固定在显示器屏幕的底部，换句话说，就是当内容只有一点点时，Web页面显示在浏览器底部，当内容高度超过浏览器高度时，Web页面的footer部分在页面的底部，总而言之Web页面的footer部分永远在页面的底部，换句说，Footer部分永远沉底。如下图所示：
 
@@ -13,9 +13,9 @@ title: css小知识
 
 ## 方法一
 
-首先我们来看第一种方法，这种方法是来自于[Matthew James Taylor](http://matthewjamestaylor.com/about){:target:_blank}的《[How to keep footers at the bottom of the page](http://matthewjamestaylor.com/blog/keeping-footers-at-the-bottom-of-the-page){:target:_blank}》。下面我们就一起来看看Matthew James Taylor介绍的方法。
+首先我们来看第一种方法，这种方法是来自于[Matthew James Taylor](http://matthewjamestaylor.com/about){:target="_blank"}的《[How to keep footers at the bottom of the page](http://matthewjamestaylor.com/blog/keeping-footers-at-the-bottom-of-the-page){:target="_blank"}》。下面我们就一起来看看Matthew James Taylor介绍的方法。
 
-### HTML Markup
+#### HTML Markup
 
 {% highlight html %}
 <div id="container">
@@ -43,7 +43,7 @@ title: css小知识
 
 真正来说，实现这页脚永远固定在页面的底部，我们只需要四个div，其中div#container是一个容器，在这个容器之中，我们包含了div#header（头部），div#page（页面主体部分，我们可以在这个div中增加更多的div结构，如上面的代码所示），div#footer（页脚部分）
 
-### CSS Code
+#### CSS Code
 
 {% highlight css %}
 html,body {
@@ -118,7 +118,7 @@ html,body {
 
 这种方法是利用footer的margin-top负值来实现footer永远固定在页面的底部效果，下面我们具体看是如何实现的。
 
-### HTML Markup
+#### HTML Markup
 
 {% highlight html %}
 <div id="container">
@@ -129,7 +129,7 @@ html,body {
 
 上面的代码是最基本的HTML Code，同时你也发现了div#footer和div#container是同辈关系，不像方法一，div#footer在div#container容器内部。当然你也可以根据你的需要把内容增加在div#container容器中，如：一个三列布局，而且还带有header部分，请看下面的代码：
 
-{% hightlight html %}
+{% highlight html %}
 <div id="container">
     <div id="header">Header Section</div>
     <div id="page" class="clearfix">
@@ -141,7 +141,7 @@ html,body {
 <div id="footer">Footer section</div>
 {% endhighlight %}
 
-### CSS Code
+#### CSS Code
 
 {% highlight css %}
 html,
@@ -203,13 +203,13 @@ body {
 
 要给footer设置固定值，因此无法让footer部分自适应高度。
 
-大家要是对这种方法感兴趣，你也可以浏览一下《[CSS Sticky Footer](http://www.cssstickyfooter.com/){:target:_blank}》和《[Pure Css Sticky Footer](http://www.lwis.net/journal/2008/02/08/pure-css-sticky-footer/){:target:_blank}》，或者直接点击[Demo](http://www.lwis.net/profile/CSS/sticky-footer.html){:target:_blank}查看其源代码。
+大家要是对这种方法感兴趣，你也可以浏览一下《[CSS Sticky Footer](http://www.cssstickyfooter.com/){:target="_blank"}》和《[Pure Css Sticky Footer](http://www.lwis.net/journal/2008/02/08/pure-css-sticky-footer/){:target="_blank"}》，或者直接点击[Demo](http://www.lwis.net/profile/CSS/sticky-footer.html){:target="_blank"}查看其源代码。
 
 ## 方法三：
 
 实现在页脚永远固定在页面底部的方法有很多，但是有很多方法是需要使用一些hack或借助javaScrip来实现，那么接下来要说的方法三，仅仅使用了15行的样式代码和一个简单明了的HTML结构实现了效果，并且兼容性强，别的不多说，先看代码。
 
-### HTML Code
+#### HTML Code
 
 {% highlight html %}
 <div id="container">
@@ -221,7 +221,7 @@ body {
 
 上面是最基本的HTML Markup，当然你也可以加上新的内容，不过有一点需要注意如果你在div#container和div#footer容器外增加内容的话，新加进徕的元素需要进行绝对定位。如如说你可以在div#container容器中加上你页面所需的元素
 
-### HTML Code
+#### HTML Code
 
 {% highlight html %}
 <div id="container">
@@ -236,7 +236,7 @@ body {
 <div id="footer">Footer Section</div>
 {% endhighlight %}
 
-### CSS Code
+#### CSS Code
 
 {% highlight html %}
 html,
@@ -304,7 +304,7 @@ body{
 
 前面三种方法我们都不需要任何javaScript或jQuery的帮助，让我们实现了页脚永远固定在页面底部的效果，前面三种方法虽然没有使用jQuery等帮助，但我们都额外增加了HTML标签来实现效果。如果你省略了这些HTML标签，再要实现效果就比较困难了，那么此时使用jQuery或javaScript方法来帮助实现是一种很好的办法，下面我们就一起来看第四种方法，通过jQuery来实现页脚永远固定在页面底部的效果。
 
-### HTML Markup
+#### HTML Markup
 
 {% highlight html %}
 <div id="header">Header Section</div>
@@ -325,7 +325,7 @@ body{
 <div id="footer">Footer Section</div>
 {% endhighlight %}
 
-### CSS Code
+#### CSS Code
 
 {% highlight css %}
 *{margin: 0;padding:0;}
@@ -372,9 +372,9 @@ body{
 
 这个方法不像前面三种方法靠CSS来实现效果，这里只需要按正常的样式需求写样式，不过有一点需要特别注意在html,body中不可以设置高度height为100%，否则此方法无法正常运行，如果你在div#footer中设置了一个高度并把宽度设置为100%将更是万无一失了。
 
-# [深入理解BFC和Margin Collapse](http://www.w3cplus.com/css/understanding-bfc-and-margin-collapse.html){:target:_blank}
+# [深入理解BFC和Margin Collapse](http://www.w3cplus.com/css/understanding-bfc-and-margin-collapse.html){:target="_blank"}
 
-# [The Internet Explorer hasLayout Property](http://www.sitepoint.com/web-foundations/internet-explorer-haslayout-property/){:target:_blank}
+# [The Internet Explorer hasLayout Property](http://www.sitepoint.com/web-foundations/internet-explorer-haslayout-property/){:target="_blank"}
 
 In a perfect world, we shouldn’t need to know anything about the hasLayout property—after all, it’s an internal component of the Windows Internet Explorer rendering engine. Its effect, however, is far reaching, and has major consequences for the appearance and behavior of elements, affecting how an element bounds its content and reacts with its neighbors.
 
@@ -436,7 +436,7 @@ It’s not a good idea to give all elements a layout—not just because of the p
 
 Children of absolutely positioned or floated elements will not shrink to wrap their content when the child has a layout.
 Static content positioned next to a float will not wrap around the float, but will instead form a rectangular block to the side of the float.
-More examples of unwanted behavior are documented on the [MSDN web site](http://msdn2.microsoft.com/en-us/library/bb250481.aspx){:target:_blank}.
+More examples of unwanted behavior are documented on the [MSDN web site](http://msdn2.microsoft.com/en-us/library/bb250481.aspx){:target="_blank"}.
 
 ## Debugging hasLayout Issues
 
@@ -454,4 +454,4 @@ The standard approach for triggering an element to gain a layout in Internet Exp
 
 In previous years, the technique of setting height to 1%, and hiding the declaration from all browsers except Internet Explorer 6 and earlier versions, was known as the Holly hack. These days, the recommended method for specifying CSS declarations for Internet Explorer only is through the use of conditional comments.
 
-The good news is that Internet Explorer 7 is a lot more robust than previous versions, and many (though not all, unfortunately) of the issues concerning layout have disappeared—you’ll need far fewer fixes than you might have in previous versions of the browser. For more information about the layout issue, see “[On Having Layout](http://www.satzansatz.de/cssd/onhavinglayout.html){:target:_blank}” at the Satzansatz web site.
+The good news is that Internet Explorer 7 is a lot more robust than previous versions, and many (though not all, unfortunately) of the issues concerning layout have disappeared—you’ll need far fewer fixes than you might have in previous versions of the browser. For more information about the layout issue, see “[On Having Layout](http://www.satzansatz.de/cssd/onhavinglayout.html){:target="_blank"}” at the Satzansatz web site.
