ios editable lost focus

--- a/_posts/2015-1-9-web.md
+++ b/_posts/2015-1-9-web.md
@@ -6,5 +6,28 @@ title: iphone webview的问题
 ### iphone webview的问题
 
 * 1、ios从5.1开始支持contenteditable属性；
-* 2、ios contenteditable元素获取焦点表现和android不一致，当用户手指点击contenteditable元素时，这个元素能获取到焦点，但是点击webview中其它元素时，这个元素并不会失去焦点，并且此时该元素还处于可输入的状态；此时要想该元素失去焦点，可以借助于objectc设置webview的endedit为yes，即取消整个webview的输入焦点状态；
-* 3、ios的软键盘弹出的时候，默认并不会挤压webview的高度，并且为了用户体验，会尽量将当前input状态的元素置于中央（可视区域的中间位置），此时可能会造成布局混乱，比如一个靠右的input水平居中后，在右侧可能会出现空白。
+* 2、ios contenteditable元素获取焦点表现和android不一致，当用户手指点击contenteditable元素时，这个元素能获取到焦点，但是点击webview中其它元素时，这个元素并不会失去焦点，并且此时该元素还处于可输入的状态；此时要想该元素失去焦点，可以借助于objectc设置webview的endedit为yes，即取消整个webview的输入焦点状态。
+
+以下代码解决了ios可输入元素获得焦点之后如何隐藏软键盘的问题（[from](http://www.cnblogs.com/dtdxrk/p/3682352.html)）：
+{% highlight js %}
+function objBlur(id,time) {
+    if (typeof id !== 'string') throw new Error('objBlur()参数错误');
+    var obj = document.getElementById(id),
+        time = time || 300,
+        docTouchend = function(event) {
+            if (event.target !== obj) {
+                setTimeout(function() {
+                    obj.blur();
+                    document.removeEventListener('touchend', docTouchend,false);
+                }, time);
+            }
+        };
+    if (obj) {
+        obj.addEventListener('focus', function(){
+            document.addEventListener('touchend', docTouchend,false);
+        }, false);
+    } else {
+        throw new Error('objBlur()没有找到元素');
+    }
+}
+{% endhighlight %}
