--- a/_posts/2014-12-10-web.md
+++ b/_posts/2014-12-10-web.md
@@ -57,6 +57,11 @@ link函数样子：function publicLinkFn(scope, cloneConnectFn, options) { ... }
 * 3、TODO: if (!namespace) { ...；
 * ...
 
+### digest过程
+
+* 1、执行$digest函数的时候是同步的，也就是说在执行$digest的过程中，非$digest的代码是得不到执行的机会的；
+* 2、在asyncQueue队列里面存放了一系列asyncTask，每一个asyncTask的结构大致如下：{scope: this, expression: expr}。在digest过程之外可能会存放一些asyncTask到asyncQueue中，这些asyncTask中的expression在执行的时候就处在了digest过程中，所以如果在这些asyncTask中执行$digest方法就会抛出digest in progress的异常。那么哪些expression会处在digest过程中呢？目前知道的：controller中的工厂方法。
+
 ### angular中的知识点
 
 * 依赖注入
