--- a/_posts/2015-1-9-web.md
+++ b/_posts/2015-1-9-web.md
@@ -6,7 +6,8 @@ title: iphone webview的问题
 ### iphone webview的问题
 
 * 1、ios从5.1开始支持contenteditable属性；
-* 2、ios contenteditable元素获取焦点表现和android不一致，当用户手指点击contenteditable元素时，这个元素能获取到焦点，但是点击webview中其它元素时，这个元素并不会失去焦点，并且此时该元素还处于可输入的状态；此时要想该元素失去焦点，可以借助于objectc设置webview的endedit为yes，即取消整个webview的输入焦点状态。
+* 2、ios contenteditable元素获取焦点表现和android不一致，当用户手指点击contenteditable元素时，这个元素能获取到焦点，但是点击webview中其它元素时，这个元素并不会失去焦点，并且此时该元素还处于可输入的状态；此时要想该元素失去焦点，可以借助于objectc设置webview的endedit为yes，即取消整个webview的输入焦点状态；
+* 3、在弹出软键盘之后，用户在输入文本的过程当中，软键盘的高度可能会发生变化，此时contenteditable元素无法正确调整位置，从而造成软键盘挡住contenteditable元素；但是input元素不会存在这个问题。
 
 以下代码解决了ios可输入元素获得焦点之后如何隐藏软键盘的问题（[from](http://www.cnblogs.com/dtdxrk/p/3682352.html)）：
 {% highlight js %}
