--- a/_posts/2015-1-18-web.md
+++ b/_posts/2015-1-18-web.md
@@ -14,19 +14,23 @@ title: webview相关知识点搜集
 * 7、Android 4.4之前的webview中，::after及::before伪对象不支持transition 。
 * 8、android 4.4+移除了webview的文件上传功能。
 * 9、webkit内核中的一些私有的meta标签，这些meta标签在开发webapp时起到非常重要的作用：
-```
+
+{% highlight html %}
 (1)<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" name="viewport" />
 (2)<meta content="yes" name="apple-mobile-web-app-capable" />
 (3)<meta content="black" name="apple-mobile-web-app-status-bar-style" />
 (4)<meta content="telephone=no" name="format-detection" />
-
+<!--
 第一个meta标签表示：强制让文档的宽度与设备的宽度保持1:1，并且文档最大的宽度比例是1.0，且不允许用户点击屏幕放大浏览；尤其要注意的是content里多个属性的设置一定要用分号+空格来隔开，如果不规范将不会起作用。
 第二个meta标签是iphone设备中的safari私有meta标签，它表示：允许全屏模式浏览；
 第三个meta标签也是iphone的私有标签，它指定的iphone中safari顶端的状态条的样式；
 第四个meta标签表示：告诉设备忽略将页面中的数字识别为电话号码
-```
+-->
+{% endhighlight %}
 
-* 10、去除Android平台中对邮箱地址的识别：<meta content="email=no" name="format-detection" />。
+
+* 10、去除Android平台中对邮箱地址的识别：
+{% highlight html %}<meta content="email=no" name="format-detection" />{% endhighlight %}
 * 11、去除iOS和Android中的输入URL的控件条：setTimeout(scrollTo,0,0,0);（这句代码必须放在window.onload里才能够正常的工作，而且你的当前文档的内容高度必须是高于窗口的高度时，这句代码才能有效的执行）。
 * 12、关闭iOS中键盘自动大写：移动版本webkit为input元素提供了autocapitalize属性，通过指定autocapitalize=”off”来关闭键盘默认首字母大写。
 * 13、可以使用 Weinre 调试。
