--- a/_posts/2015-2-13-web.md
+++ b/_posts/2015-2-13-web.md
@@ -3,6 +3,8 @@ layout: post
 title: 一些 JavaScript 题目
 ---
 
+### 一些 JavaScript 题目
+
 {% highlight js %}
 var foo = function foo() {
     console.log(foo === foo);
